# ConwayProject

./: CMakeLists.txt  main_benchmark.cpp  main_gui.cpp
Headers/: AlgorithmFactory.h  AppState.h  Benchmark.h  BenchmarkCommons.h  CudaGame.h  GUIPanel.h  Game.h  GameRenderer.h  IAppControls.h  ICommand.h  IConwayAlgorithm.h  MPIGame.h  OpenMPGame.h  SequentialGame.h
Headers/CommandImpl/: ClearCommand.h  LoadCommand.h  PauseCommand.h  PlayCommand.h  SaveCommand.h
Sources/: AlgorithmFactory.cpp  Benchmark.cpp  CudaGame.cu  GUIPanel.cpp  Game.cpp  GameRenderer.cpp  MPIGame.cpp  OpenMPGame.cpp  SequentialGame.cpp
Sources/CommandImpl/: ClearCommand.cpp  LoadCommand.cpp  PauseCommand.cpp  PlayCommand.cpp  SaveCommand.cpp
